# information_retrieval

./: README.md  pyproject.toml
core/: __init__.py  compression.py  direct_index.py  index.py  position_storage.py  query.py  ranker_l1.py  ranker_l2.py  tokenizer.py  vector_index.py
notebooks/: load_dataset.ipynb  metrics_analytic.ipynb  sample_ms_marco.ipynb  vector_search.ipynb
scripts/: train_faiss_index.py
web/: app.py
web/templates/: base.html  results.html
