[project]
name = "search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.0",
    "flask==2.3.3",
    "ir-datasets>=0.5.11",
    "pandas>=2.3.3",
    "python-dotenv==1.0.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
